make system collections configurable

--- a/app-config.yml
+++ b/app-config.yml
@@ -40,6 +40,7 @@ collections:
   billing: [rate,payment,credit,transaction,country_rate]
   document: [document]
   trigger: [trigger,hook,promo_entry]
+system_collections: [user,partner,session,audit]
 use_triggers: no
 
 
