--- a/validators.yml
+++ b/validators.yml
@@ -92,7 +92,7 @@ exists:
 
 extension:
   valid: /\.$1$/i
-  error: $name must have be of type '$1'
+  error: $name must be of type '$1'
 
 find_in:
   error: No such $name ($value)
