fixed time on user history

--- a/user.yml
+++ b/user.yml
@@ -342,7 +342,7 @@ history:
     - what: { width: 30%, name: Action }
     - detail: { width: 55% }
   values:
-    - collection.data: [10, audit, user: $key, time , action, detail]
+    - collection.data: [10, audit, user: $key, create_time , action, detail]
 
 
 
