--- a/controls.yml
+++ b/controls.yml
@@ -645,6 +645,10 @@ processing:
   classes: span
   style: { display: none, z-index: 1000 }
 
+quantity_input:
+  type: number_input
+  attr: { min: 0 }
+
 question_input:
   type: label_top
   styles: [widest,block]
