--- a/datatable.yml
+++ b/datatable.yml
@@ -18,7 +18,7 @@ datatable:
     class: []
   cell:
     class: [didi]
-    style: {}
+    styles: {}
   script: [/common/datatable.js]
   row_creator: { type: table_row }
   css: [/common/datatable.css]
