--- a/controls.yml
+++ b/controls.yml
@@ -652,7 +652,8 @@ processing:
 quantity_input:
   type: number_input
   max: 99999999999
-  attr: { min: 0, max: $max }
+  min: 0
+  attr: { min: $min, max: $max }
 
 question_input:
   type: label_top
