option to propagate datable events and pass request arguments to datatable load

--- a/datatable.yml
+++ b/datatable.yml
@@ -38,6 +38,7 @@ datatable:
     - default: { span: 1, filter: yes, data: false}
 
   sow: [slide,slideoff]
+  propagated_events: []
 
   #paging
   paging:
