fixed dropdown_collection default options

--- a/controls.yml
+++ b/controls.yml
@@ -206,7 +206,8 @@ dropdown:
 
 dropdown_collection:
   type: dropdown
-  options: [collection.data]
+  options:
+    - collection.data: []
   valid: collection.exists($name,$value)
 
 element:
