use parent_id for dropdown_table db table name

--- a/controls.yml
+++ b/controls.yml
@@ -213,7 +213,7 @@ dropdown_collection:
 dropdown_table:
   type: dropdown
   options:
-    - select id, name from $name
+    - sql: select id, name from $parent_id
   valid: sql_exists($name,id)
 
 element:
