drop_down table only list values where row is active

--- a/controls.yml
+++ b/controls.yml
@@ -212,8 +212,9 @@ dropdown_collection:
 
 dropdown_table:
   type: dropdown
+  conditions: where active
   options:
-    - sql: select id, name from $parent_id
+    - sql: select id, name from $parent_id where active
   valid: sql_exists($name,id)
 
 element:
