put isearch in fixed  position

--- a/isearch.yml
+++ b/isearch.yml
@@ -34,7 +34,7 @@ isearch:
     desc: Show all items
   drop:
     type: container
-    class: [isearch-drop,overlay,scroll-y]
+    class: [isearch-drop,overlay,fixed,scroll-y]
     text: ""
     height: auto
     show: no
