--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,6 @@
 date.timezone = "Africa/Johannesburg"
-session.save_path = /home/curo/tmp
+session.save_path = /tmp
+
+; Fix for PCRE "JIT compilation failed" error
+[Pcre]
+pcre.jit=0
