--- a/validators.yml
+++ b/validators.yml
@@ -28,8 +28,8 @@ before_period:
   error: $name must be before $1 $2
 
 between:
-  valid: range($1,$2,$3)
-  error: $1 ($v1) must be between $v2 and $v3
+  valid: range($value,$1,$2)
+  error: $name ($value) must be between $1 and $2
 
 blank:
   error: $name must be blank
@@ -204,9 +204,9 @@ quantity:
 
 range:
   valid:
-    - greater_equal($v2)
-    - less_equal($v3)
-  error: $1 ($v1) must be in range $v2 to $v3
+    - greater_equal($2)
+    - less_equal($3)
+  error: $1 ($v1) must be in range $2 to $3
 
 regex:
   error: Invalid $name
