delay datatable filter to improve performance

--- a/datatable.yml
+++ b/datatable.yml
@@ -10,6 +10,7 @@ datatable:
   title: { class: [didi] }
   body: { class: [didi,table-body] }
   min_row_height: 20
+  search_delay: 250
   defaults: {}
   row_actions: []
   row_styles:
@@ -80,6 +81,7 @@ datatable:
     name: +
     desc: More details ...
     pages: []
+    class: []
 
   slide:
     event: slide
