--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ RewriteRule \.(yml|conf)$ - [R=404,NC,L]
 RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
 php_flag log_errors on
 #php_flag display_errors on
+php_value session.save_path /tmp
