store php errors in log file

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@ RewriteRule ^index\.(php|html?)$ index.php [L]
 RewriteRule ^(\w+[\w\/]*)(?:\?(.+))?$ index.php?path=$1&$2 [NC,L,QSA]
 RewriteRule \.(yml|conf)$ - [R=404,NC,L]
 RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
-php_flag log_errors on
+#php_flag log_errors on
+php_value error_log log/php-errors.log
 #php_flag display_errors on
 php_value session.save_path /tmp
