using php password_hash and password_verify instead of deprecated mysql password()

--- a/forgot_password.yml
+++ b/forgot_password.yml
@@ -84,8 +84,9 @@ change:
               where email_address = '$email'
           - if not valid abort: [password, Invalid OTP]
           - if expired abort: [password, OTP Expired]
+          - hash_password: $password
           - sql_exec: >
-              update user set password = password('$password') 
+              update user set password = '$password_hash' 
               where email_address = '$email'
           - close_dialog: Password has been changed successfully
   
