--- a/password_changer.yml
+++ b/password_changer.yml
@@ -56,9 +56,10 @@ update_password:
   navigate: [ update_password ]
   post:
     - read_session: email
+    - hash_password: $password
     - sql_exec: >
-        update user set password = password('$password'), attempts=0
-        where email_address = '$email'
+        update user set password = '$hash', attempts=0
+	where email_address = '$email'
     - sql_values: select id uid from user where email_address = '$email'
     - write_session: uid
     - clear_values
