--- a/fields.yml
+++ b/fields.yml
@@ -246,7 +246,6 @@ next:
   attr:
     class: action wizard-jump
 
-
 password:
   desc: A secret combination of letters and number only known to you. Please do not give out your password.
   valid: password
@@ -264,17 +263,17 @@ register:
   url: /user/register
 
 send_email:
-  support: Mukoni Support <support@mukoni.co.za>
+  support: [support@mukoni.co.za, Mukoni Support]
+  no_reply: no-reply@mukoni.co.za
   headers:
     - MIME-Version: "1.0"
     - Content-type: text/html; charset=iso-8859-1
-  from: $from_user <$from_email>
-  to: $to_user <$to_email>
-  smtp:
-    host: $smtp_host
-    auth: true
-    username: $smtp_user
-    password: $smtp_password
+  from: [$from_email, $from_user]
+  to: [$to_email, $to_user]
+  host: $smtp_host
+  auth: true
+  username: $smtp_user
+  password: $smtp_password
 
 
 start_date:
@@ -288,7 +287,7 @@ submit_page:
   call: $class::$page($key)
 
 
-support_email: Mukoni Support <support@mukoni.co.za>
+support_email: [support@mukoni.co.za, Mukoni Support]
 
 
 title:
