--- a/fields.yml
+++ b/fields.yml
@@ -268,6 +268,7 @@ send_email:
   headers:
     - MIME-Version: "1.0"
     - Content-type: text/html; charset=iso-8859-1
+  from_email: no-reply@mukoni.co.za
   from: [$from_email, $from_user]
   to: [$to_email, $to_user]
   host: $smtp_host
